# learning-fastapi

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/app/: __init__.py  app.py  server.py  settings.py
tests/: __init__.py  test_app.py
typings/fastapi/: __init__.pyi  responses.pyi
